# jarvis

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
3thrd/: 3thrd.cmake
3thrd/QGSettings/: qgsettings.cmake
3thrd/ormpp/: ormpp.cmake
3thrd/singleton/: singleton-app-gui.cpp  singleton-app-gui.h  singleton-app.cpp  singleton-app.h  singleton.cmake
app/: CMakeLists.txt  global.h
app/algorithm/: MapReduce.inl  algorithm.cmake  dns-routine.cpp  dns-routine.h  map-reduce.h  map-reduce.inl
app/client/: client.cmake  dns-client.cpp  dns-client.h
app/common/: area.h
app/config/: configure.cpp  configure.h
app/core/: c-list.h  c-log.c  c-log.h  c-poll.c  c-poll.h  common-request.cpp  common-request.h  common-scheduler.cpp  common-scheduler.h  communicator.cpp  communicator.h  core.cmake  exec-request.h  executor.cpp  executor.h  io-request.h  io-service.cpp  io-service.h  m-poll.c  m-poll.h  msg-queue.c  msg-queue.h  rb-tree.c  rb-tree.h  sleep-request.h  sub-task.cpp  sub-task.h  thread-pool.c  thread-pool.h
app/db/: db.cpp  db.h
app/factory/: algorithm-task-factory.h  algorithm-task-factory.inl  connection.h  dns-task-impl.cpp  factory.cmake  file-task-impl.cpp  graph-task.cpp  graph-task.h  http-task-impl.cpp  resource-pool.cpp  resource-pool.h  spider-task-factory.cpp  spider-task-factory.h  task-error.h  task-factory.cpp  task-factory.h  task-factory.inl  task.h  task.inl  workflow.cpp  workflow.h
app/main/: client-data.h  http-router.cpp  http-router.h  main.cpp
app/manager/: dns-cache.cpp  dns-cache.h  endpoint-params.h  facilities.h  facilities.inl  future.h  global.cpp  global.h  manager.cmake  route-manager.cpp  route-manager.h
app/modules/: http-server.cpp  http-server.h  modules.cmake  server.cpp  server.h
app/nameservice/: dns-resolver.cpp  dns-resolver.h  name-service.cpp  name-service.h  nameservice.cmake
app/protocol/: consul-data-types.cpp  consul-data-types.h  package-wrapper.cpp  package-wrapper.h  protocol-message.h  protocol.cmake  ssl-wrapper.cpp  ssl-wrapper.h
app/protocol/dns/: dns-message.cpp  dns-message.h  dns-parser.cpp  dns-parser.h  dns-util.cpp  dns-util.h  dns.cmake
app/protocol/http/: http-message.cpp  http-message.h  http-parser.c  http-parser.h  http-util.cpp  http-util.h  http.cmake
app/spider/: gold-spider.cpp  gold-spider.h  spider-manager.cpp  spider-manager.h  spider.cmake  spider.cpp  spider.h
app/sqlite/: sqlite.cmake
app/utils/: crc32c.c  crc32c.h  date-utils.cpp  date-utils.h  encode-stream.cpp  encode-stream.h  file-read-write.cpp  file-read-write.h  json-parser.c  json-parser.h  json-utils.cpp  json-utils.h  lru-cache.h  md5-util.cpp  md5-util.h  sqlite-utils.cpp  sqlite-utils.h  string-util.cpp  string-util.h  uri-parser.cpp  uri-parser.h  utils.cmake
common/: common.cmake
daemon/: CMakeLists.txt  main.cpp
daemon-iface/: daemon-iface.cmake  plugin-iface.h
daemon-interface/: daemon-interface.cmake  plugin-interface.h
daemon/main/: main-daemon.cpp  main-daemon.h  main.cmake  plugin-manager.cpp  plugin-manager.h
daemon/plugins/: plugins.cmake
data/: jarvis.service  res.qrc
data/html/: index.html
demo/: CMakeLists.txt  demo-dns-client.cpp  demo-graph-task.cpp  demo-http-echo-service.cpp  demo-http-file-server.cpp  demo-http-proxy.cpp  demo-http-server.cpp  demo-json.cpp  demo-matrix-multiply.cpp  demo-mysql.cpp  demo-name-service.cpp  demo-parallel-wget.cpp  demo-reducer.cpp  demo-sort-task.cpp  demo-spider.cpp  demo-timer-task.cpp  demo-wget.cpp
gui/: CMakeLists.txt  main.cpp
gui/main/: header-button.cpp  header-button.h  main-header.cpp  main-header.h  main-window.cpp  main-window.h  main.cmake  system-tray.cpp  system-tray.h  xatom-helper.cpp
pkg/archlinux/: PKGBUILD
scripts/: push.sh
test/: CMakeLists.txt  test-all.cpp  test-c-poll.cpp  test-executor.cpp  test-msg-queue.cpp  test-protocol.cpp  test-rb-tree.cpp  test-sub-task.cpp  test-thread-pool.cpp
tools/: CMakeLists.txt  au-sge.py  generate-archlinux-package.sh  gold-tool.cpp  gold-tool.py
